--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <title>Netflix</title>
-        <style type="text/javascript" src="style/main.css"></style>
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src=""></script>
+    <link rel="stylesheet" href="style/main.css">
+    <!--Owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.css">
+    <link rel="stylesheet" href="style/responsive.css">
+    <title>Netflix</title>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h2 class="logo">NETFLIX</h2>
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Documentários</a>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <H3 class="titulo">HOUSE OF CARDES</H3>
+                <p class="descricao">O congressista Francis Underwood e sua mulher, Claire, fazem de tudo para conquistar seus objetivos, não importa o que aconteça. Um mundo político recheado de ganância, corrupção e luxúria na capital Washington.</p>
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        <i class="fas fa-play"></i>
+                     ASSISTIR AGORA
+                    </button>
+                    <button role="button" class="botao">
+                        <i class="fas fa-info-circle"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/mini1.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini2.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini3.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini4.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini5.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini6.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini7.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini8.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini9.jpg" alt="imagen">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini10.jpg" alt="imagen">
+            </div>
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/e7a91ee1db.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
+
+</body>
 </html>
